--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,20 @@ services:
       retries: 10
       start_period: 20s
 
+  db_init:
+    image: pgvector/pgvector:pg17
+    networks:
+      - mynah_internal
+    environment:
+      PGPASSWORD: mynah
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - ./storage/schema.sql:/schema/schema.sql:ro
+    command: ["sh", "-c", "psql -h postgres -U mynah -d mynah -v ON_ERROR_STOP=1 -f /schema/schema.sql"]
+    restart: "no"
+
   mynah_agent:
     build:
       context: ./compute/agent/mynah_agent
@@ -50,6 +64,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      db_init:
+        condition: service_completed_successfully
       ollama:
         condition: service_healthy
     volumes:
