--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       MYNAH_DATABASE_DSN: postgresql://mynah:mynah@postgres:5432/mynah
       MYNAH_ARTIFACTS_PATH: /home/appuser/data/artifacts
       OLLAMA_BASE_URL: http://ollama:11434
-      OLLAMA_MODEL: qwen2.5:7b
+      OLLAMA_MODEL: ${OLLAMA_MODEL:-qwen3.5:35b-a3b}
       OLLAMA_EMBED_MODEL: qwen3-embedding:0.6b
       OLLAMA_EMBED_DIM: "1024"
       MYNAH_SERVICE_NAME: mynah_agent
