--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       start_period: 20s
 
   ollama:
-    image: ollama/ollama:latest
+    image: ollama/ollama:0.17.1
     command: ["serve"]
     networks:
       - mynah_internal
